httpd/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: httpd-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "###ZARF_VAR_DOMAIN###"
      # Redirect to HTTP traffic to HTTPS
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "###ZARF_VAR_DOMAIN###"
      tls:
        mode: PASSTHROUGH
        credentialName: httpd-tls
