httpd/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpd-vs
spec:
  hosts:
    - "###ZARF_VAR_DOMAIN###"
  gateways:
    - httpd-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - "###ZARF_VAR_DOMAIN###"
      route:
        - destination:
            host: httpd-service
            port:
              number: 443
  # Comment this `http` section out to disable HTTP
  http:
    - match:
        - port: 80
      route:
        - destination:
            host: httpd-service
            port:
              number: 80
